# ert

./: queue_driver_diagram.md  test_python.py
dev/bench/: data.js
faster_ee/: Cargo.toml  faster_ee.pyi  pyproject.toml  test.py
faster_ee/src/: lib.rs  main.rs  utils.rs
faster_ee/src/evaluator/: mod.rs
faster_ee/src/evaluator/ee_threads/: batch_events_into_buffer.rs  do_heartbeat_clients.rs  main_server.rs  mod.rs  publisher.rs
faster_ee/src/evaluator/ee_threads/listen_for_messages/: connection_handlers.rs  event_handlers.rs  mod.rs
faster_ee/src/evaluator/ee_threads/process_event_buffer/: event_handlers.rs  mod.rs  test.rs
faster_ee/src/events/: client_event.rs  ensemble_event.rs  mod.rs  snapshot.rs  snapshot_event.rs  types.rs
faster_ee/src/events/dispatcher_event/: checksum_event.rs  fm_step_event.rs  mod.rs
faster_ee/src/events/ert_event/: mod.rs  realization_event.rs
faster_ee/src/events/snapshots/: ensemble_snapshot.rs  fm_step_snapshot.rs  mod.rs  realization_snapshot.rs
faster_ee/src/snapshots/: ensemble_snapshot.rs  fm_step_snapshot.rs  mod.rs  realization_snapshot.rs
src/_ert/: events.py  threading.py
src/_ert/forward_model_runner/: client.py  fm_dispatch.py
src/ert/: __main__.py
src/ert/config/: design_matrix.py
src/ert/ensemble_evaluator/: _ensemble.py  config.py  minimal_evaluator.py  monitor.py  snapshot.py
src/ert/gui/: main_window.py
src/ert/run_models/: base_run_model.py  model_factory.py  (+1 more)
src/ert/scheduler/: job.py  (+2 more)
test-data/poly_example/: poly.ert  poly_eval.py
tests/everest/: conftest.py  test_api_snapshots.py
(+21 files in other folders)
